css/style.css
:root {
    --background-color: #1D1D1D;
    --text-color: #FAF8FF;
    --accent-color: #D83A23;
    --secondary-color: #e1dfe5;
    --card-title-color: #FF0000;
    --search-results-background: #1e1e1e;
    --scrollbar-track-shadow: inset 0 0 5px grey;
    --scrollbar-thumb-color: #D83A23;
}

* {
    box-sizing: border-box;
}

body {
    background-color: var(--background-color);
    color: var(--text-color);
}

h1 {
    font-family: 'Oswald', sans-serif;
    letter-spacing: .5em;
    color: var(--accent-color);
    padding-left: 1.6%;
    font-size: 3rem;
}

.genre-filter {
    font-family: 'Oswald', sans-serif;
    letter-spacing: .1em;
}

.genres {
    margin-top: 3.2em;
}

.genres p {
    font-size: 1.4em;
    color: var(--secondary-color);
}

.genres p:hover {
    color: var(--accent-color);
    cursor: pointer;
}

.left-side {
    background-color: HSL(0, 0%, 13%);
    border-right: .03em solid #575757;
}

.card-title {
    color: var(--card-title-color);
}

.card {
    flex: 0 0 auto;
    width: 20vw;
    height: auto;
    transition: transform 0.1s ease-in-out;
    background-color: transparent;
}

.card-body {
    background-color: HSL(0, 0%, 13%);
}

.card:hover {
    cursor: pointer;
    transform: scale(1.02);
}

.card-rating {
    margin: 0;
    padding: 0;
    font-size: 12px;
}

.search-bar {
    background-color: transparent;
    border-radius: 20px;
    border: 1px solid var(--text-color);
    height: 50%;
    margin-top: 3px;
    width: 50%;
}

.search-input {
    position: relative;
    border-radius: 20px;
}

.search-input .form-control {
    box-shadow: none;
    line-height: 20px;
    padding-left: 35px;
}

.search-input .form-control::placeholder {
    color: var(--text-color);
}

.search-input .input-group-text {
    position: absolute;
    left: 0%;
    top: 50%;
    transform: translateY(-50%);
}

.search-input .form-control:focus {
    outline: none;
}

#search-results {
    position: absolute;
    top: 100%;
    left: 0;
    right: 0;
    background-color: var(--search-results-background);
    border-radius: 4px;
    list-style-type: none;
    padding: 0;
    margin: 0;
    max-height: 200px;
    overflow-y: auto;
    z-index: 3;
}

#search-results div {
    padding: 10px;
    cursor: pointer;
}

#search-results div:hover {
    background-color: grey;
}

#movies-list {
    display: flex;
    flex-wrap: nowrap;
    overflow-x: auto;
    margin-right: 0;
    margin-left: 0;
    margin-top: 4.5rem;
}

.card-img-top {
    width: 100%;
    height: 90%;
    object-fit: cover;
}

.card-title {
    font-size: 1.2em;
}

/* width */
::-webkit-scrollbar {
    height: 8px;
    width: 8px;
}

/* Track */
::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px var(--scrollbar-track-shadow);
    border-radius: 10px;
    margin-inline: .5em;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: var(--scrollbar-thumb-color);
    border-radius: 10px;
}

.spinner-container {
    height: 50vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.modal-content {
    background-color: var(--search-results-background);
    max-width: 70%;
}

#content {
    display: none;
    opacity: 0;
}

strong {
    color: var(--accent-color);
}

@media screen and (max-width: 992px) {
    .left-side {
        display: none;
    }

    .header {
        flex-direction: column;
    }

    .search-bar {
        width: 100%;
    }
}

